--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.20.5",
     "axios": "^0.27.2",
     "canvas": "^2.9.1",
+    "dotenv": "^16.0.1",
     "face-api.js": "^0.22.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
