--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "mysql": "^2.18.1"
   }
 }
